--- a/wordpress/wp-content/themes/missionphoenix/scss/style.scss
+++ b/wordpress/wp-content/themes/missionphoenix/scss/style.scss
@@ -167,33 +167,30 @@ header .container, .front-page, .pages, .posts-page, .post  {
   }
   .navigation {
     flex-direction: column;
-    height: $portrait-folder-vh;
+    height: $portrait-folder-vh - 2vh;
     align-items: center;
     text-align: center;
     margin: 0px;
-    bottom: 1px;
+    bottom: 0.2vh;
   }
- // @media (min-width: 411px) and (max-width: 416px) {
- //   .navigation {
- //   bottom: 0px; 
- //   }
- // }
+
   .navigation li {
     display: block;
-    width: $portrait-folder-vh / 5;
+    width: ( $portrait-folder-vh - 2vh)/ 5;
     max-height: 9.5vw;
     height: 9.5vw;
     right: 1vw;
     transform: rotate( 90deg );
     border-bottom-width: 0px;
     border-radius: 10px 10px 0px 0px;
+    padding: 1.3vw 0vw;
   }
   .navigation li:last-child {
-    width: $portrait-folder-vh / 5 - 1.8vh;
-    bottom: 0.9vh;
+    width: ( $portrait-folder-vh - 1.5vh)/ 5;
+    top: 0.1vh;
   }
   .navigation li a {
-    top: 2vw;
+    top: 0.2vh;
   }
  
   .front-page, .pages, .posts-page, .post {
@@ -219,14 +216,17 @@ header .container, .front-page, .pages, .posts-page, .post  {
   }
 
   /* mobiles portrait */
-  @include mobile {
+  @include tablet {
     .front-page, .pages, .posts-page, .post {
       max-width: $portrait-folder-vw; 
       width: 100%; 
       border-radius: 10px;
       margin: 2vh 0 2vh 2vw;
     }
+    .navigation li  {
+      font-size: 1rem;
 
+    }
   }
 }
 /* 
